Link to all posts on detail page

--- a/blog/templates/blog/allblogs.html
+++ b/blog/templates/blog/allblogs.html
@@ -263,9 +263,9 @@
                 alt="blog title"
               />
               <div class="card-body">
-                <a href="{% url 'detail' blog.id %}" class="card-link"
+                <a href="{% url 'detail' blog.id %}" class="card-link text-decoration-none"
                   ><h5 class="card-title text-primary">
-                    {{ blog }} {{ blog.title}}
+                    {{ blog.title}}
                   </h5></a
                 >
                 <p class="d-flex justify-content-between align-items-center">
