--- a/blog/templates/blog/detail.html
+++ b/blog/templates/blog/detail.html
@@ -262,18 +262,22 @@
                 alt="detail title"
               />
               <div class="card-body">
-                <a href="{% url 'detail' detail.id %}" class="card-link"
+                <a href="{% url 'detail' detail.id %}" class="card-link text-decoration-none"
                   ><h5 class="card-title text-primary">
-                    {{ detail }} {{ detail.title}}
+                    {{ detail.title}}
                   </h5></a
                 >
                 <p class="d-flex justify-content-between align-items-center">
                   <small class="text-body-secondary"
-                    >{{ detail.pub_date_formatted }}</small
+                    >{{ detail.pub_date }}</small
                   >
                 </p>
                 <p class="card-text">{{ detail.body }}</p>
               </div>
+              <span class="text-primary p-3">
+                <a class="nav-link active" href="{% url 'allblogs' %}""> < Back to all blogs</a>
+            </span>
+
             </div>
           </div>
         </div>
