--- a/jobs/templates/jobs/home.html
+++ b/jobs/templates/jobs/home.html
@@ -280,7 +280,7 @@
                   alt="job title"
                 />
                 <div class="card-body">
-                  <p class="card-text">{{ job.summary }}</p>
+                  <p class="card-text text-primary">{{ job.summary }}</p>
                   <div
                     class="d-flex justify-content-between align-items-center"
                   >
@@ -290,12 +290,6 @@
                         class="btn btn-sm btn-outline-secondary"
                       >
                         View
-                      </button>
-                      <button
-                        type="button"
-                        class="btn btn-sm btn-outline-secondary"
-                      >
-                        Edit
                       </button>
                     </div>
                     <small class="text-body-secondary">9 mins</small>
